# ecal-perftool

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: build-ubuntu.yml  build-windows.yml
src/: main.cpp  publisher.cpp  publisher.h  publisher_statistics.h  subscriber.cpp  subscriber.h  subscriber_statistics.h
